--- a/instance.yaml
+++ b/instance.yaml
@@ -8,6 +8,9 @@
         assign_public_ip: yes
         instance_type: "t2.micro" 
         region: "eu-west-1"
-        image: "ami-02a39bdb8e8ee056a"
+        image: "ami-02a39bdb8e8ee056a"                                      # ubuntu  "ami-02a39bdb8e8ee056a"
         vpc_subnet_id: "subnet-148de972"
+        count: 1
+
+
 
