--- a/r1soft-agent.yml
+++ b/r1soft-agent.yml
@@ -1,6 +1,6 @@
 ---
 - name: Installs r1soft agent
-  hosts: ec2
+  hosts: all
   become: yes
   become_method: sudo
   tasks:
@@ -32,7 +32,7 @@
 
 
     - name: Get key
-      shell: "r1soft-setup --get-key http://34.240.9.247:8080/"
+      shell: "r1soft-setup --get-key http://34.240.9.247:8080"
       ignore_errors: true
 
   
